# mpi-seq-mock

./: README.md  configure.ac
src/: Makefile  Makefile.am  mpi.c  mpi.h  test.c
utils/: Makefile.am  mpicc
